--- a/src/app/dashboard/layout/components/footer/footer.component.html
+++ b/src/app/dashboard/layout/components/footer/footer.component.html
@@ -23,7 +23,7 @@
 			class="tw-bg-transparent tw-text-mainColor hover:tw-text-black tw-h-auto tw-w-full tw-border-b tw-border-gray-200 tw-border-solid tw-border-0 tw-rounded-none tw-py-1.5 transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
 			متشابهات السـور
 		</button> -->
-		<button type="" mat-flat-button
+		<button (click)="openAlsajadat()" type="" mat-flat-button
 			class="tw-bg-transparent tw-text-mainColor hover:tw-text-black tw-h-auto tw-w-full tw-border-b tw-border-gray-200 tw-border-solid tw-border-0 tw-rounded-none tw-py-1.5 transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
 			السجدات
 		</button>
